calico-cloud_versioned_docs/version-2.2.0/operations/cluster-management.mdx
---
title: Manage clusters
description: Manage cluster storage, add new clusters, and configure alerts.
---

## Connect new clusters

To connect new clusters to {{prodname}}, select Managed Clusters in the left nav, and click **Connect Cluster**.

## Recover a deleted managed cluster

If you inadvertenty delete a managed cluster, rerun the `curl` command and the cluster will reconnect to {{prodname}}.

## Manage and monitor multiple clusters in Manager UI

### Access your managed clusters

Each time you install {{prodname}} on a cluster, the cluster is added to the drop-down menu in Manager.

![cluster-menu](/img/calico-cloud/cluster-menu.png)

Use this menu to move between your managed clusters. You can create as many managed clusters as your subscriptions allows.

### Managed cluster views

Each time you change to a different cluster, the entire Manager "view" is set for the cluster you've selected. For example, each managed cluster has unique indexes for Elasticsearch clusters, a separate instance of Kibana, and the dashboard reflects only the selected managed cluster.

### Manage policies in multiple clusters

To implement, modify, or view network policies in a given cluster:

1. Toggle to a managed cluster using the managed cluster drop-down menu.
1. Define, modify or view network policies in that cluster.
1. You can monitor the impact of a policy using the policy visualization tool (Flow Viz).

To apply policies in one managed cluster to a different cluster, manually apply the manifest/.yaml using `kubectl`.

To download manifests for a policy, click **Export** for the selected policy.

![export-policy](/img/calico-cloud/export-policy.png)
