calico-cloud_versioned_docs/version-18/operations/cluster-management.mdx
---
description: Manage cluster storage, add new clusters, and configure alerts.
---

import variables from '@site/calico-cloud_versioned_docs/version-18/variables';

# Manage clusters

## Connect new clusters

To connect new clusters to {variables.prodname}, select Managed Clusters in the left nav, and click **Connect Cluster**.

## Remove a cluster from the managed clusters list

### Prerequisites

- You are signed in to Manager UI and you have [Owner or Admin privileges](../users/user-management.mdx).
- The cluster you want to remove is [disconnected from {variables.prodname}](disconnect.mdx).

### Remove a cluster

For the cluster you want to remove, select **Actions** > **Delete**, and then confirm your choice by selecting **Delete cluster**.

:::note

Deleting a managed cluster does not remove {variables.prodname} logs.

If a new managed cluster is connected with the same name as a previously deleted managed cluster, the logs associated with the deleted managed cluster will be displayed as if they belong to the new managed cluster.

:::

### Recover a deleted managed cluster

If you inadvertently delete a managed cluster, you may restore it by connecting your cluster using the same name as the previously deleted cluster. For help with connecting a managed cluster see [Connect a cluster to {variables.prodname}](../get-started/connect/install-cluster.mdx).

## Manage and monitor multiple clusters in Manager UI

### Access your managed clusters

Each time you install {variables.prodname} on a cluster, the cluster is added to the drop-down menu in Manager UI.

![cluster-menu](/img/calico-cloud/cluster-menu.png)

Use this menu to move between your clusters. You can connect as many managed clusters as your subscriptions allows.

### Managed cluster views

When you select a different cluster from the cluster menu, the entire Manager UI view changes to reflect the selected cluster.
For example, each managed cluster has unique indexes for Elasticsearch clusters, a separate instance of Kibana, and the dashboard reflects only the selected managed cluster.

### Manage policies in multiple clusters

To implement, modify, or view network policies in a given cluster:

1. Toggle to a managed cluster using the managed cluster drop-down menu.
1. Define, modify or view network policies in that cluster.
1. You can monitor the impact of a policy using the policy visualization tool (Flow Viz).

To apply policies in one managed cluster to a different cluster, manually apply the manifest/.yaml using `kubectl`.

To download manifests for a policy, click **Export** for the selected policy.

![export-policy](/img/calico-cloud/export-policy.png)
